<resources>
    <string name="app_name">Foundations</string>
    <string name="foundations">FOUNDATIONS</string>
    <string name="home_inspection_made_easy">HOME INSPECTION MADE EASY</string>
    <string name="get_started">GET STARTED</string>
    <string name="sign_up">SIGN UP</string>
    <string name="welcome">WELCOME</string>
    <string name="license_number">License Number</string>
    <string name="username">Username</string>
    <string name="company_name">Company Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="users">USERS</string>
    <string name="new_user">New User?</string>
    <string name="continue_as_guest">SELECT USER</string>
    <string name="empty_field">Please check for empty or Error fields</string>
    <string name="profile">Profile</string>
    <string name="inspections">Inspections</string>
    <string name="checklists">Checklists</string>
    <string name="pdfs">PDFs</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="user_email">user@foundations.com</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="userProfile">currentUserProfile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basic_information">Basic Information</string>
    <string name="buyer_full_name">Buyer Full Name</string>
    <string name="seller_full_name">Seller Full Name</string>
    <string name="site_address">Site Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="buyer_information">Buyer Information</string>
    <string name="address">Address</string>
    <string name="seller_information">Seller Information</string>
    <string name="site_information">Site Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">SAVE</string>
    <string name="_98133">98133</string>
    <string name="wa">WA</string>
    <string name="seattle">Seattle</string>
    <string name="michael">Michael</string>
    <string name="jobs">Jobs</string>
    <string name="save_and_continue">SAVE AND CONTINUE</string>
    <string name="introduction">Introduction</string>
    <string name="exterior">Exterior</string>
    <string name="interior">Interior</string>
    <string name="limitations">Limitations</string>
    <string name="overview">Overview</string>
    <string name="windows">Windows</string>
    <string name="doors">Doors</string>
    <string name="recent_inspections">Recent Inspections</string>
    <string name="all_inspections">Inspections</string>
    <string name="select_inspection">Select Inspection</string>
    <string name="start_new_inspection">Start New Inspection</string>
    <string name="please_select_insp">Please select a profile</string>

    <string name="new_inspection">NEW INSPECTION</string>
    <string name="inspection">INSPECTION</string>

    <string name="site_details_title">Site Details</string>
    <string name="sd_bedrooms">Bedrooms</string>
    <string name="_2">2</string>
    <string name="sd_bd_hint">Number of bedrooms</string>
    <string name="sd_bathrooms">Bathrooms</string>
    <string name="sd_ba_hint">Number of bathrooms</string>
    <string name="_0">0</string>
    <string name="sd_stories">Stories</string>
    <string name="sd_stories_hint">Number of stories</string>
    <string name="sd_square_feet">Square Feet</string>
    <string name="sd_sqft_hint">Square Footage</string>
    <string name="sd_inspection_fee">Inspection Fee</string>
    <string name="inspection_fee_hint">Inspection fee amount</string>
    <string name="sd_year_built">Year Built</string>
    <string name="sd_furnished">Furnished</string>
    <string name="year_built_hint">Year Built</string>
    <string name="no_furnished">No</string>
    <string name="present_at_inspection">Present at Inspection</string>
    <string name="sd_present_hint">Who is present?</string>
    <string name="buyer_present">Buyer</string>
    <string name="orientation">Orientation</string>
    <string name="orientation_hint">Which was is it facing?</string>
    <string name="north">North</string>
    <string name="submit_and_continue">Submit and Continue</string>
    <string name="current_report_key">currentReport</string>
    <string name="currentReportIdKey">currentReportId</string>
    <string name="category_title">Category Title</string>
    <string name="subcategory_title">Subcategory Title</string>
    <string name="list_item_info">list item info</string>
    <string name="save_pdf">SAVE PDF</string>
    <string name="cl_category_name">cl category name</string>
    <string name="cl_categories">Checklist Categories</string>
    <string name="add_category">Add Category</string>
    <string name="add_category_dialog_btn">Add Category</string>
    <string name="cancel_addcat_dialog">Cancel</string>
    <string name="category_name">Category Name</string>
    <string name="ac_cat_hint">Enter category name</string>
    <string name="add_subcategory">Add Subcategory</string>
    <string name="asc_sc_name">Add subcategory name</string>
    <string name="enter_subcategory_name">Enter subcategory name</string>
    <string name="current_insp">Current Inspection</string>
    <string name="add_item">Add Item</string>
    <string name="edit">Edit Item</string>
    <string name="list_item">List Item</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="add_photo">Add Photo</string>
    <string name="select_subcategory_for_item">Select Subcategory for Item</string>
    <string name="select_category">Select Category</string>
    <string name="ready_to_generate_pdf">Ready To Generate PDF?</string>
    <string name="buyer_first_name">Buyer First Name</string>
    <string name="buyer_last_name">Buyer Last Name</string>
    <string name="seller_first_name">Seller First Name</string>
    <string name="seller_last_name">Seller Last Name</string>
    <string name="select_insp">Please select an inspection</string>
    <string name="done">DONE</string>
    <string name="unable_camera">Unable to launch camera</string>
    <string name="item_photo">Item Photo</string>
    <string name="delete_item">Delete Item</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="photo_for_list_item">Photo for list item</string>
    <string name="close_photo">CLOSE</string>
    <string name="property_photo">Property Photo</string>
    <string name="photo_of_property">Photo of property</string>
    <string name="no_items">No items to generate PDF</string>
    <string name="main_logo">main logo</string>
    <string name="tom">Tom</string>
    <string name="smtih">Smith</string>
    <string name="_1256_marline_ct">1256 Marline CT</string>
    <string name="pdfimage">pdfimage</string>
    <string name="profile_image_desc">profile image</string>
    <string name="pdf_reports">PDF Reports</string>
    <string name="send_pdf">SEND PDF</string>
    <string name="title_page_title">Home Inspection Report</string>
    <string name="prepedfor">Prepared for</string>
    <string name="open_pdf">OPEN PDF</string>

</resources>

