...
            android:orientation="vertical">
            <TextView
                android:id="@+id/basic_info_start"
                android:layout_width="wrap_content"
                android:textColor="@color/headerColor"
...
                    android:layout_height="wrap_content"
                    android:text="@string/buyer_information"
                    android:id="@+id/buyer_info_title"
                    android:textColor="@color/white"
                    android:textStyle="bold"
...
                    android:textStyle="bold"
                    android:textSize="@dimen/_20"
                    android:id="@+id/title_buyer_first_name"
                    />
                <EditText
                    android:textColor="@color/white"
                    android:id="@+id/ni_buyer_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40"
...
                <EditText
                    android:textColor="@color/white"
                    android:id="@+id/ni_buyer_last_name"
                    android:textColorHint="@color/lettersColor"
                    android:layout_width="match_parent"
...
                    android:textStyle="bold"
                    android:textSize="@dimen/_20"
                    android:id="@+id/seller_info_title"
                    android:layout_gravity="center"/>
                <TextView
...
                    android:textStyle="bold"
                    android:textSize="@dimen/_20"
                    android:id="@+id/title_seller_first_name"
                    />

                <EditText
                    android:textColor="@color/white"
                    android:id="@+id/ni_seller_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40"
...
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:id="@+id/title_seller_last_name"
                    android:textSize="@dimen/_20" />
                <EditText
                    android:textColor="@color/white"
                    android:id="@+id/ni_seller_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40"
...
                    android:textStyle="bold"
                    android:textSize="@dimen/_20"
                    android:id="@+id/title_site_info"
                    android:layout_gravity="center"/>
                <TextView
...
                    android:textStyle="bold"
                    android:textSize="@dimen/_20"
                    android:id="@+id/bi_si_title"
                    />
                <EditText
                    android:textColor="@color/white"
                    android:id="@+id/ni_address"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/lettersColor"
...
                    android:text="@string/city"
                    android:textStyle="bold"
                    android:id="@+id/bi_si_city"
                    android:textSize="@dimen/_20" />
                <EditText
                    android:textColor="@color/white"
                    android:id="@+id/ni_city"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40"
...
                    android:layout_height="wrap_content"
                    android:text="@string/state"
                    android:id="@+id/bi_si_state"
                    android:textStyle="bold"
                    android:textSize="@dimen/_20" />
                <EditText
                    android:textColor="@color/white"
                    android:id="@+id/ni_state"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40"
...
                    android:text="@string/zip_code"
                    android:textStyle="bold"
                    android:id="@+id/bi_si_zip"
                    android:textSize="@dimen/_20" />
                <EditText
                    android:textColor="@color/white"
                    android:id="@+id/ni_zip"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/property_photo_title"
                    android:text="@string/property_photo"
                    android:textSize="@dimen/_20" />
...
                        android:backgroundTint="@color/colorPrimary"
                        android:layout_height="@dimen/_40"
                        android:id="@+id/add_property_photo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
...
                </androidx.constraintlayout.widget.ConstraintLayout>
                <Button
                    android:id="@+id/ni_create_report"
                    android:layout_marginTop="@dimen/_25"
                    android:background="@drawable/form"
...
