...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/sd_title"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/site_details_title"
                android:textAlignment="center"
                android:textColor="@color/white"
...
                android:text="@string/sd_bedrooms"
                android:textColor="@color/white"
                android:textSize="@dimen/_20" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/sd_bedrooms_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/sd_bd_hint"
                android:backgroundTint="@color/white"
                android:hint="@string/_0"
                android:inputType="numberDecimal"
...
                android:text="@string/sd_bathrooms"
                android:textColor="@color/white"
                android:textSize="@dimen/_20" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/sd_bathrooms_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/sd_ba_hint"
                android:backgroundTint="@color/white"
                android:hint="@string/_0"
                android:inputType="numberDecimal"
...
                android:text="@string/sd_stories"
                android:textColor="@color/white"
                android:textSize="@dimen/_20" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/sd_stories_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/sd_stories_hint"
                android:backgroundTint="@color/white"
                android:hint="@string/_0"
                android:inputType="numberDecimal"
...
                android:text="@string/sd_square_feet"
                android:textColor="@color/white"
                android:textSize="@dimen/_20" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/sd_square_feet_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/sd_sqft_hint"
                android:backgroundTint="@color/white"
                android:hint="@string/_0"
                android:inputType="numberDecimal"
...
                android:text="@string/sd_inspection_fee"
                android:textColor="@color/white"
                android:textSize="@dimen/_20" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/sd_inspection_fee_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/inspection_fee_hint"
                android:backgroundTint="@color/white"
                android:hint="@string/_0"
                android:inputType="numberDecimal"
...
                android:text="@string/sd_year_built"
                android:textColor="@color/white"
                android:textSize="@dimen/_20" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/sd_year_built_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/inspection_fee_hint"
                android:backgroundTint="@color/white"
                android:hint="@string/_0"
                android:inputType="numberDecimal"
...
                android:text="@string/sd_furnished"
                android:textColor="@color/white"
                android:textSize="@dimen/_20" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/sd_furnished_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/sd_furnished"
                android:backgroundTint="@color/white"
                android:hint="@string/no_furnished"
                android:textColorHint="@color/lettersColor"
                android:textSize="@dimen/_20" />

            <TextView
                android:id="@+id/sd_present"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/present_at_inspection"
                android:textColor="@color/white"
                android:textSize="@dimen/_20" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/sd_present_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/sd_present_hint"
                android:backgroundTint="@color/white"
                android:hint="@string/buyer_present"
                android:textColorHint="@color/lettersColor"
                android:textSize="@dimen/_20" />

            <TextView
                android:id="@+id/sd_orientation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orientation"
                android:textColor="@color/white"
                android:textSize="@dimen/_20" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/sd_orientation_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/orientation_hint"
                android:backgroundTint="@color/white"
                android:hint="@string/north"
                android:textColorHint="@color/lettersColor"
                android:textSize="@dimen/_20" />

            <Button
                android:layout_marginTop="@dimen/_20"
                android:id="@+id/sd_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form"
                android:layout_marginBottom="@dimen/_20"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/submit_and_continue"
...
