...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginLeft="@dimen/_70"
                android:src="@drawable/ic_baseline_edit_24"
                android:id="@+id/signupcamera"
                android:onClick="startCamera"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
...
                android:width="@dimen/_300"
                android:text="@string/first_name"
                android:textColor="@color/lettersColor"
                android:textSize="@dimen/_20" />

            <EditText
                android:id="@+id/edit_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10sp"
                android:width="@dimen/_300"
                android:textColor="@color/lettersColor"
                android:textSize="@dimen/_20" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="@dimen/_20"
                />
            <EditText
                android:id="@+id/edit_last_name"
                android:layout_marginTop="-10sp"
                android:width="@dimen/_300"
                android:textColor="@color/lettersColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_number"
                android:textSize="@dimen/_20"
                />
            <EditText
                android:id="@+id/edit_license_number"
                android:layout_marginTop="-10sp"
                android:width="@dimen/_300"
                android:textColor="@color/lettersColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textSize="@dimen/_20"
                />
            <EditText
                android:id="@+id/edit_company_name"
                android:layout_marginTop="-10sp"
                android:width="@dimen/_300"
                android:textColor="@color/lettersColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/_20"
                />
            <EditText
                android:id="@+id/edit_email"
                android:layout_marginTop="-10sp"
                android:width="@dimen/_300"
                android:textColor="@color/lettersColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="@dimen/_20"
                />
            <EditText
                android:id="@+id/edit_phone"
                android:layout_marginTop="-10sp"
                android:width="@dimen/_300"
                android:inputType="phone"
                android:textColor="@color/lettersColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_25"
                />

        </LinearLayout>

        <Button
            android:id="@+id/get_started_button"
            android:layout_width="@dimen/_200"
            android:layout_height="@dimen/_40"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30"
            android:background="@drawable/get_started"
            android:text="@string/sign_up"
...
